# CCAS.jl

./: LICENSE.md  README.md  REQUIRE
libcas/interface/: README
libcas/lib/: README
libcas/parameters/: README
libccas/VS/ctest/: ctest.sln
libccas/VS/ctest/Debug/: ctest.ilk
libccas/VS/ctest/ctest/: CTESTout.txt  ctest.cpp  ctest.vcxproj  ctest.vcxproj.filters
libccas/VS/ctest/ctest/Debug/: vc120.idb
libccas/VS/ctest/ctest/Debug/ctest.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  ctest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libccas/VS/ctest/ctest/x64/Debug/: vc120.idb
libccas/VS/ctest/x64/Debug/: ctest.ilk
libccas/VS/cuvtest/: cuvtest.sln
libccas/VS/cuvtest/cuvtest/: cuvtest.cpp  cuvtest.vcxproj  cuvtest.vcxproj.filters
libccas/VS/cuvtest/cuvtest/Debug/: vc120.idb
libccas/VS/cuvtest/cuvtest/Debug/cuvtest.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  cuvtest.lastbuildstate
libccas/VS/cuvtest/cuvtest/x64/Debug/: vc120.idb
libccas/VS/cuvtest/x64/Debug/: cuvtest.ilk
libccas/VS/libccas/: libccas.sln
libccas/VS/libccas/Debug/: libccas.ilk
libccas/VS/libccas/libccas/: libccas.vcxproj  libccas.vcxproj.filters
libccas/VS/libccas/libccas/Debug/: vc120.idb
libccas/VS/libccas/libccas/Debug/libccas.tlog/: CL.read.1.tlog  CL.write.1.tlog  (+5 more)
libccas/VS/libccas/x64/Debug/: libccas.ilk
libccas/doc/: Common API usage patterns.txt
libccas/include/: libccas.h
libccas/lib/: libccas.lib  libccas_x32.lib  libccas_x64.lib
libccas/src/: CMakeLists.txt  libccas.cpp  libccas.h  libccas_Export.h
src/: CCAS.jl
test/: runtests.jl  test.jl
(+22 files in other folders)
